deployments/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: default  # Change to your desired namespace if needed
spec:
  replicas: 1  # Number of pods to run
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: nginx  # Replace this with your image
        ports:
        - port: 80
          targetPort: 80
          protocol: TCP
