deployments/ingress-counter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-counter
  namespace: default  # Change to your desired namespace if needed
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-port: "80"  # Set to a valid port
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb  # Use the AWS ALB ingress class
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-counter  # Your service name
                port:
                  number: 80  # Service port
